# sae-interp

./: .env.example  .gitignore  CONCEPTS.md  HANDOVER_LOCAL.md  NOTES_OFFLINE.md  README.md  RUNBOOK.md  TODO_HARDEN_PHASE12.md  TODO_HARDEN_PHASE34.md  pyproject.toml  requirements.lock.txt  requirements.txt
app/: feature_browser.py
colab-output/: op1.md  op2.md
configs/: sae_gpt2small.yaml  sae_gpt2small_debug.yaml
notebooks/: 01_feature_exploration.ipynb  02_results_figures.ipynb
results/: a1_9577_steering.txt  a1_analysis.md  a2_alpha10.txt  a2_alpha40.txt  a2_alpha5.txt  a2_analysis.md  a3_analysis.md  a3_maxact_50.txt  a5_neg_clamp_analysis.md  a5_negative_clamp_raw.txt  features.md
scripts/: 00_smoke_test.py  01_explore_pretrained_sae.py  02_causal_intervention.py  03_train_sae.py  04_eval_frontier.py  99_pdb_practice.py
src/sae_interp/: __init__.py  activations.py  config.py  device.py  features.py  interventions.py  metrics.py  net.py  sae.py  train.py
